2021-01-23:
The project is started after realizing that very few people are technically skilled enough or willing to go through the inconvenience of being able to type romanized Arabic using systems with diacritics in the Latin script.

Two text areas and two buttons are placed on a webpage.